// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout render test should render 1`] = `
<Layout
  hasBack={false}
  headerActions={Array []}
  noTabs={false}
  store={Object {}}
/>
`;

exports[`Layout render test should render 2`] = `
<Layout
  noTabs={false}
  store={Object {}}
  style={Object {}}
/>
`;
